@@ -1,22 +1,23 @@
 package campingplatz.equip;
 
+import campingplatz.equip.sportsItemReservations.SportItemCart;
+import campingplatz.plots.Plot;
+import campingplatz.plots.PlotCatalog;
+import campingplatz.plots.plotReservations.PlotCart;
 import org.javamoney.moneta.Money;
 import org.salespointframework.catalog.Product;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.salespointframework.core.Currencies.EURO;
 
 @Controller
+@SessionAttributes("cart")
 public class SportItemCatalogController {
 
 	private SportItemCatalog itemCatalog;
@@ -25,9 +26,15 @@ public class SportItemCatalogController {
 		this.itemCatalog = itemCatalog;
 	}
 
+	//TODO remove
+	@ModelAttribute("cart") // quick fix for tests
+	PlotCart initializeCart() {
+		return new PlotCart();
+	}
+
 	@GetMapping("/sportequipmentcatalog")
 	String setupCatalog(Model model) {
-		List<SportItem> listo = this.itemCatalog.findAll().stream().collect(Collectors.toList());
+		List<SportItem> listo = this.itemCatalog.findAll().stream().toList();
 
 		model.addAttribute("items", listo);
 
@@ -38,27 +45,14 @@ public class SportItemCatalogController {
 	@PreAuthorize("hasRole('BOSS')")
 	public String setup(Model model) {
 
-		List<SportItem> listo = this.itemCatalog.findAll().stream().collect(Collectors.toList());
+		List<SportItem> listo = this.itemCatalog.findAll().stream().toList();
 
 		model.addAttribute("items", listo);
+		// model.addAttribute("first", listo.get(0));
+		model.addAttribute("cate", listo.get(0).getCategories().stream().toList().get(0));
 
 		return "dashboards/sportsequipment_management";
 	}
-	/*
-	 * @GetMapping({"/sportequipmentcatalog", "/management/sportsequipment"})
-	 * public String setupCatalogAndManagement(Model model, @LoggedIn
-	 * Optional<UserAccount> user) {
-	 * List<SportItem> sportItems =
-	 * this.itemCatalog.findAll().stream().collect(Collectors.toList());
-	 * model.addAttribute("items", sportItems);
-	 * 
-	 * if (user.isPresent() && user.get().hasRole(Role.of("BOSS"))){
-	 * return "dashboards/sportsequipment_mamangement";
-	 * } else {
-	 * return "servings/sportequipmentcatalog";
-	 * }
-	 * }
-	 */
 
 	@GetMapping("/item/{id}")
 	public String showSportItemDetails(@PathVariable Product.ProductIdentifier id, Model model) {
@@ -74,62 +68,45 @@ public class SportItemCatalogController {
 		}
 	}
 
-	/*
-	 * @PostMapping("/addSportItem")
-	 * public String addSportItem(@RequestParam String name,
-	 * 
-	 * @RequestParam double price,
-	 * 
-	 * @RequestParam double deposit,
-	 * 
-	 * @RequestParam int amount,
-	 * 
-	 * @RequestParam(required = false) Product.ProductIdentifier itemId,
-	 * 
-	 * @RequestParam String category) {
-	 * 
-	 * if (itemId != null) {
-	 * SportItem oldItem =
-	 * itemCatalog.findByName(name).stream().findFirst().orElse(null);
-	 * if (oldItem != null) {
-	 * oldItem.setAmount(oldItem.getAmount() + amount);
-	 * itemCatalog.save(oldItem);
-	 * }
-	 * }
-	 * //SportItem newItem = new SportItem(name, Money.of(price, EURO),
-	 * Money.of(deposit, EURO), " ", amount);
-	 * itemCatalog.save(new SportItem(name, Money.of(price, EURO), Money.of(deposit,
-	 * EURO),category, amount));
-	 * return "redirect:/management/sportsequipment";
-	 * 
-	 * }
-	 */
-
 	@PostMapping("/addSportItem")
+	@PreAuthorize("hasRole('BOSS')")
 	public String addSportItem(@RequestParam String name,
 			@RequestParam double price,
 			@RequestParam double deposit,
 			@RequestParam int amount,
-			@RequestParam(required = false) Product.ProductIdentifier itemId,
-			@RequestParam String category) {
+			@RequestParam String category,
+			@RequestParam String imagePath,
+			@RequestParam String desc) {
 
 		SportItem item = itemCatalog.findByName(name).stream().findFirst().orElse(null);
 		if (item == null) {
-			itemCatalog.save(new SportItem(name, Money.of(price, EURO), Money.of(deposit, EURO), category, amount,
-					"",
-					""));
-			// TODO please add
+			itemCatalog.save(new SportItem(name,
+					Money.of(price, EURO),
+					Money.of(deposit, EURO),
+					category, amount,
+					imagePath,
+					desc));
+		} else {
+			item.setName(name);
+			item.setPrice(Money.of(price, EURO));
+			item.setDeposit(Money.of(deposit, EURO));
+			item.addCategory(category); // das ist noch nicht so gut.
+			item.setAmount(amount);
+			item.setImagePath(imagePath);
+			item.setDesc(desc);
+			itemCatalog.save(item);
 		}
 		return "redirect:/management/sportsequipment";
 	}
 
 	@PostMapping("/changeSportItemAmount")
-	public String changeSportItemAmount(@RequestParam String nameItem,
-			@RequestParam int amountItem,
+	@PreAuthorize("hasRole('BOSS')")
+	public String changeSportItemAmount(@RequestParam int amountItem,
 			@RequestParam(required = false) Product.ProductIdentifier equip_id) {
 
 		if (equip_id != null) {
-			SportItem item = itemCatalog.findByName(nameItem).stream().findFirst().orElse(null);
+			SportItem item = itemCatalog.findById(equip_id).stream().findFirst().orElse(null);
+
 			if (item != null) {
 				item.setAmount(amountItem);
 				itemCatalog.save(item);
@@ -140,6 +117,7 @@ public class SportItemCatalogController {
 	}
 
 	@PostMapping("/deleteSportItem")
+	@PreAuthorize("hasRole('BOSS')")
 	public String deleteSportItem(@RequestParam String itemName,
 			@RequestParam(required = false) Product.ProductIdentifier id) {
 		SportItem item = itemCatalog.findByName(itemName).stream().findFirst().orElse(null);
